// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BasicDialog /> should render as expected 1`] = `
<FocusTrap>
  <div
    aria-labelledby="basicDialogTitle basicDialogDesc"
    aria-modal={true}
    className="sg-ls7awc-container ui-material__base-dialog"
    data-test-id="basicDialog"
    role="alertdialog"
  >
    <div
      className="sg-1t4okzq-content"
    >
      <Title
        title="Hello World"
      />
      <Content
        content={
          <div>
            Hello World
          </div>
        }
      />
    </div>
    <div
      className="sg-3766ab-actions"
    >
      <div
        className="sg-1orvbrr-innerActions"
      >
        <Buttons
          actions={
            [
              {
                "action": [MockFunction],
                "label": "action0",
              },
              {
                "action": [MockFunction],
                "label": "action1",
              },
              {
                "action": [MockFunction],
                "label": "action2",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</FocusTrap>
`;

exports[`<BasicDialog /> should render with minimal props 1`] = `
<FocusTrap>
  <div
    aria-labelledby="basicDialogTitle basicDialogDesc"
    aria-modal={true}
    className="sg-ls7awc-container ui-material__base-dialog"
    data-test-id="basicDialog"
    role="alertdialog"
  >
    <div
      className="sg-1t4okzq-content"
    >
      <Title
        title={null}
      />
      <Content
        content={null}
      />
    </div>
    <div
      className="sg-3766ab-actions"
    >
      <div
        className="sg-1orvbrr-innerActions"
      >
        <Buttons
          actions={[]}
        />
      </div>
    </div>
  </div>
</FocusTrap>
`;
